web_static/styles/6-filter.css
.filters {
    color: white;
    height: 70px;
    width: 100%;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
    position: absolute;
    margin: auto;
}

button {
    font-size: 18px;
    background-color: #FF5A5F;
    color: #FFFFFF;
    height: 48px;
    width: 20%;
    border: none;
    border-radius: 4px;
    top: 10px;
    right: 20px;
    position: absolute;
}

button:hover {
    opacity: 0.9;
}

.locations {
    height: 100%;
    width: 25%;
    border-right: 1px solid #DDDDDD;
    position: absolute;
}

.locations:hover .popover {
    display: block;
    visibility: visible;
}

.amenities {
    height: 100%;
    width: 25%;
    left: 25%;
    position: absolute;
}

.amenities:hover .popover {
    display: block;
    visibility: visible;
}

.locations h3,
.amenities h3 {
    color: #484848;
    font-weight: 600;
    margin-bottom: 2px;
    margin-left: 20%;
}

.locations h4,
.amenities h4 {
    color: #484848;
    font-weight: 400;
    font-size: 14px;
    margin: 0px 0px 0px 20%;
}

.popover {
    display: none;
    background-color: #FAFAFA;
    width: 100%;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
    list-style-type: none;
    margin-top: 17px;
    position: relative;
    padding: 10px 0px 10px 0px;
}

.locations .popover ul {
    list-style-type: none;
    margin-top: 0px;
}

.amenities .popover ul {
    list-style-type: none;
}

.popover h2 {
    color: #484848;
    font-size: 16px;
    margin: 20px 0px 0px 30px;
}

.popover li {
    color: #484848;
    line-height: 25px;
    padding-left: 10px;
}

